--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,17 @@
+body {
+  background: linear-gradient(#7612A3, blueviolet);
+}
+
 .App {
   text-align: center;
+  display: flex;
+  width: 900px;
+  margin: 100px auto;
+}
+
+.Col {
+  width: 300px;
+  padding: 20px;
 }
 
 .App-logo {
